--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
     :root{
       /* Core blues (NO green tint) */
-      --bg-0:#000814;         /* deepest navy */
-      --bg-1:#001d3d;         /* deep blue */
-      --bg-2:#003566;         /* royal blue */
+      --bg-0:#05014A;  /* Dark Night Blue */
+      --bg-1:#08027C;  /* Midnight Blue */
+      --bg-2:#0F03E5;  /* Royal Blue or Electric Blue */
+      --bg-3:#031DE5;  /* vivid blue */
 
       /* Accents */
       --blue:#0077ff;
@@ -42,7 +43,7 @@
     html,body{height:100%}
 
     body{
-      background: linear-gradient(135deg, var(--bg-0) 0%, var(--bg-1) 50%, var(--bg-2) 100%);
+      background: linear-gradient(135deg, var(--bg-0) 0%, var(--bg-1) 38%, var(--bg-2) 72%, var(--bg-3) 100%);
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Inter", Roboto, sans-serif;
       color: var(--text);
       overflow-x: hidden;
@@ -60,23 +61,23 @@
     }
 
     body::before{
-      background:
-        radial-gradient(circle at 18% 60%, rgba(0,119,255,0.34), transparent 58%),
-        radial-gradient(circle at 78% 20%, rgba(126,88,255,0.22), transparent 60%);
-      filter: blur(140px);
-      animation: drift1 10s infinite alternate ease-in-out;
-      opacity: 0.95;
-    }
+  background:
+    radial-gradient(circle at 18% 60%, rgba(15,3,229,0.28), transparent 58%),
+    radial-gradient(circle at 78% 20%, rgba(3,29,229,0.18), transparent 60%);
+  filter: blur(150px);
+  animation: drift1 10s infinite alternate ease-in-out;
+  opacity: 0.95;
+}
 
-    body::after{
-      background:
-        radial-gradient(circle at 70% 55%, rgba(0,180,255,0.22), transparent 60%),
-        radial-gradient(circle at 35% 20%, rgba(0,85,255,0.20), transparent 65%),
-        repeating-linear-gradient(60deg, transparent 0px, transparent 20px, rgba(0,119,255,0.05) 20px, rgba(0,119,255,0.05) 21px);
-      filter: blur(160px);
-      animation: drift2 12s infinite alternate ease-in-out;
-      opacity: 0.9;
-    }
+body::after{
+  background:
+    radial-gradient(circle at 70% 55%, rgba(8,2,124,0.22), transparent 60%),
+    radial-gradient(circle at 35% 20%, rgba(5,1,74,0.24), transparent 65%),
+    repeating-linear-gradient(60deg, transparent 0px, transparent 20px, rgba(15,3,229,0.045) 20px, rgba(15,3,229,0.045) 21px);
+  filter: blur(170px);
+  animation: drift2 12s infinite alternate ease-in-out;
+  opacity: 0.9;
+}
 
     @keyframes drift1{
       0%{transform: translate(-40px,-50px) scale(1); opacity:0.85;}
